--- a/css/styles.css
+++ b/css/styles.css
@@ -211,12 +211,12 @@ hr.new {
 	padding:20px;
 	color:white;
 	position: fixed;
-    top:37%;
+    top:19%;
     left:37%;
 	opacity:0.8;
 	border-radius:5px;
 	border:solid 1px black;
-	background-color:black;
+	background-image: linear-gradient(138deg, red, blue);
 }
 
 .input-id button {
